# caissAI

./: .buildinfo  .env.example  .gitignore  CLAUDE.md  README.md  config.cfg.example  game_analyzer.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tasks.py  utils.html
.github/worflows/: lint.yml  test.yml
_sources/: utils.rst.txt
docs/source/: conf.py  game_analyzer.rst  index.rst
src/caissAI/: __init__.py  __main__.py
src/caissAI/config/: lichess_eco.parquet
tests/: conftest.py
tests/unit/: test_game_analyzer.py  test_utils.py
